<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    tools:ignore="contentDescription">


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/geek"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/todo" />
    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/app_logo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/name"
        android:background="@drawable/edt_background"
        android:paddingStart="13dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edt_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email"
        android:background="@drawable/edt_background"
        android:paddingStart="13dp"
        android:inputType="text"
        android:autofillHints=""
        tools:ignore="RtlSymmetry,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edt_email"
        android:layout_marginTop="10dp"
        android:hint="@string/Password"
        android:background="@drawable/edt_background"
        android:paddingStart="13dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="RtlSymmetry,TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_password"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
        android:textSize="20sp"/>


</RelativeLayout>